add category and sub category query
